--- a/admin1/index.html
+++ b/admin1/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-  <title>GitHub Authentication Example</title>
-  <!--- This example uses jQuery: -->
-  <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
-
-  <!-- Make sure to include Nelify's authentication library -->
-  <!-- Also available via npm as netlify-auth-providers -->
-  <script src="https://unpkg.com/netlify-auth-providers"></script>
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Content Manager</title>
+</head>
+<body>
+  <!-- Include the script that builds the page and powers Netlify CMS -->
+  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+</body>
 </html>
